--- a/package.json
+++ b/package.json
@@ -23,33 +23,31 @@
     "babel-plugin-module-resolver": "^3.1.3",
     "browser-sync": "^2.26.13",
     "cache-loader": "^3.0.1",
-    "core-js": "^3.8.1",
+    "core-js": "^3.8.3",
     "del": "^3.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-cache": "^1.1.3",
-    "gulp-cheerio": "^0.6.3",
     "gulp-debug": "^4.0.0",
     "gulp-dependents": "^1.2.5",
     "gulp-imagemin": "^5.0.3",
     "gulp-pug": "^4.0.1",
-    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-strip-css-comments": "^2.0.0",
-    "gulp-svg-sprite": "^1.5.0",
     "gulp-svgmin": "^2.2.0",
+    "gulp-svgstore": "^7.0.1",
     "gulp-uglify": "^3.0.1",
     "imagemin-jpeg-recompress": "^6.0.0",
     "imagemin-pngquant": "^6.0.0",
     "node-sass": "^4.14.1",
     "terser-webpack-plugin": "^1.2.3",
-    "webpack": "^5.14.0",
+    "webpack": "^5.16.0",
     "webpack-merge": "^4.2.2",
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
     "is_js": "^0.9.0",
     "svgxuse": "^1.2.6"
   }
